# Practical-C2

./: .travis.yml  CMakeLists.txt  Makefile.am  README.md  altRun  configure.ac  postinstall  run  submitionRun  tiny-output.txt  tiny.txt  valgrindinstall
alternative/: configure.ac
resource/: tiny.txt
src/: CMakeLists.txt  Makefile.am  fileiostring.c  fileiostring.h  practical_trees.c  stacknode.c  treenode.c  treenode.h
tests/: CMakeLists.txt  Makefile.am  check_test.c
